Fixed the out of bounds problem with the event date calculations.

--- a/trailr/public/stylesheets/timeline.css
+++ b/trailr/public/stylesheets/timeline.css
@@ -23,8 +23,10 @@
 	padding:0px;
 	margin:0px;
 	margin:-1px;
+	padding:-1px;
 	position:relative;
 	height:166px;
+	height:165px;	
 	
 	overflow:auto;
 	overflow-y:hidden;
